--- a/test.tex
+++ b/test.tex
@@ -1,106 +1,116 @@
-\documentclass{article}
-\usepackage{epsfig}
-\renewcommand{\baselinestretch}{1}
-\setlength{\textheight}{9in}
-\setlength{\textwidth}{6.5in}
-\setlength{\headheight}{0in}
-\setlength{\headsep}{0in}
-\setlength{\topmargin}{0in}
-\setlength{\oddsidemargin}{0in}
-\setlength{\evensidemargin}{0in}
-\setlength{\parindent}{.3in}
+\documentclass[]{article}
+
+%%%%%%%%%%%%%%%%%%%
+% Packages/Macros %
+%%%%%%%%%%%%%%%%%%%
+\usepackage{amssymb,latexsym,amsmath}     % Standard packages
+
+
+%%%%%%%%%%%
+% Margins %
+%%%%%%%%%%%
+\addtolength{\textwidth}{1.0in}
+\addtolength{\textheight}{1.00in}
+\addtolength{\evensidemargin}{-0.75in}
+\addtolength{\oddsidemargin}{-0.75in}
+\addtolength{\topmargin}{-.50in}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Theorem/Proof Environments %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newtheorem{theorem}{Theorem}
+\newenvironment{proof}{\noindent{\bf Proof:}}{$\hfill \Box$ \vspace{10pt}}  
+
+
+%%%%%%%%%%%%
+% Document %
+%%%%%%%%%%%%
 \begin{document}
 
-\leftline{Pat Q.~Student}
-\leftline{AME 20231}
-\leftline{16 January 2020}
+\title{Sample \LaTeX ~File}
+\author{David P. Little}
+\maketitle
 
-\medskip
-This is a sample file in the text formatter \LaTeX.
-I require you to use it for the following reasons:
+\begin{abstract}
+This document represents the output from the file ``sample.tex" once compiled using your favorite \LaTeX compiler.  This file should serve as a good example of the basic structure of a ``.tex" file as well as many of the most basic commands needed for typesetting documents involving mathematical symbols and expressions.  For more of a description on how each command works, please consult the links found on our course webpage.
+\end{abstract}
 
-\begin{itemize}
+\section{Lists}
+%%%%%%%%%%%%%%%
+\begin{enumerate}
+\item {\bf First Point (Bold Face)}
+\item {\em Second Point (Italic)}
+\item {\Large Third Point (Large Font)}
+    \begin{enumerate}
+        \item {\small First Subpoint (Small Font)} 
+        \item {\tiny Second Subpoint (Tiny Font)} 
+        \item {\Huge Third Subpoint (Huge Font)} 
+    \end{enumerate}
+\item[$\bullet$] {\sf Bullet Point (Sans Serif)}
+\item[$\circ$] {\sc Circle Point (Small Caps)} 
+\end{enumerate}
 
-\item{It produces the best output of text, figures,
-      and equations of any
-      program I've seen.}
 
-\item{It is machine-independent. It runs on Linux, Macintosh (see {\tt TeXShop}), and Windows (see {\tt MiKTeX}) machines.
-     You can e-mail {\tt ASCII} text versions of most relevant files.}
+\section{Equations}
+%%%%%%%%%%%%%%%%%%%
 
-\item{It is the tool of choice for many research
-     scientists and engineers.
-     Many journals accept 
-     \LaTeX~ submissions, and many books
-     are written in \LaTeX.}
+\subsection{Binomial Theorem}
+\begin{theorem}[Binomial Theorem]
+For any nonnegative integer $n$, we have
+$$(1+x)^n = \sum_{i=0}^n {n \choose i} x^i$$
+\end{theorem}
 
-\end{itemize}
-\medskip
-Some basic instructions are given next.
-Put your text in here.  You can be a little sloppy    about
-spacing.  It adjusts the text to look good.
-{\small You can make the text smaller.}
-{\tiny You can make the text tiny.}
+\subsection{Taylor Series}
+The Taylor series expansion for the function $e^x$ is given by
+\begin{equation}
+e^x = 1 + x + \frac{x^2}{2} + \frac{x^3}{6} + \cdots = \sum_{n\geq 0} \frac{x^n}{n!}
+\end{equation}
 
-Skip a line for a new paragraph.   
-You can use italics ({\em e.g.} {\em  Thermodynamics is everywhere}) or {\bf bold}.
-Greek letters are a snap: $\Psi$, $\psi$,
-$\Phi$, $\phi$.  Equations within text are easy---
-A well known Maxwell thermodynamic relation is
-$\left.{\partial T \over \partial P}\right|_{s} = 
-\left.{\partial v \over \partial s}\right|_{P}$.
-You can also set aside equations like so:
-\begin{eqnarray}
-du &=& T\ ds -P\ dv, \qquad \mbox{first law.}\label{fl}\\
-ds &\ge& {\delta q \over T}.\qquad  \qquad \mbox{second law.} \label{sl}
-\end{eqnarray}
-Eq.~(\ref{fl}) is the first law.
-Eq.~(\ref{sl}) is the second law.
-References\footnote{Lamport, L., 1986, {\em \LaTeX: User's Guide \& Reference Manual},
-    Addison-Wesley: Reading, Massachusetts.}
-are available. 
-If you have an postscript file, say {\tt sample.figure.eps}, in the same local directory,
-you can insert the file as a figure.  Figure \ref{sample}, below, plots an isotherm for air modeled as an ideal gas. 
-\begin{figure}[ht]
-\epsfxsize=2.5in
-\centerline{\epsffile{sample.figure.eps}}
-\caption{Sample figure plotting $T=300~{\rm K}$ isotherm for air when modeled as an ideal gas.}
-\label{sample}
-\end{figure}
 
-\medskip
-\leftline{\em Running \LaTeX}
-\medskip
+\subsection{Sets}
 
-You can create a \LaTeX~ file with any text editor ({\tt vi}, {\tt emacs}, {\tt gedit}, 
-etc.). 
-To get a document, you need to run the \LaTeX~ application
-on the text file.  The text file must have the suffix ``{\tt .tex}''
-On a Linux cluster machine, this is done via the command
+\begin{theorem}
+For any sets $A$, $B$ and $C$, we have
+$$ (A\cup B)-(C-A) = A \cup (B-C)$$
+\end{theorem}
 
-\medskip
-{\tt latex file.tex}
+\begin{proof}
+\begin{eqnarray*}
+(A\cup B)-(C-A) &=& (A\cup B) \cap (C-A)^c\\
+&=& (A\cup B) \cap (C \cap A^c)^c \\
+&=& (A\cup B) \cap (C^c \cup A) \\
+&=& A \cup (B\cap C^c) \\
+&=& A \cup (B-C)
+\end{eqnarray*}
+\end{proof}
 
-\medskip
-\noindent
-This generates three files: {\tt file.dvi}, {\tt file.aux},
-and {\tt file.log}.  The most important is {\tt file.dvi}. 
 
-\medskip
-\noindent
-The finished product can be previewed in the following way.
-Execute the commands:
+\section{Tables}
+%%%%%%%%%%%%%%%%
+\begin{center}
+\begin{tabular}{l||c|r}
+left justified & center & right justified \\ \hline
+1 & 3.14159 & 5 \\
+2.4678 & 3 &  1234 \\ \hline \hline
+3.4678 & 6.14159 & 1239
+\end{tabular}
+\end{center}
 
-\medskip
 
-{\tt dvipdf file.dvi}\hspace{1.9in}{\em Linux System}
-
-\medskip
-\noindent
-This command generates {\tt file.pdf}.  
-Alternatively, you can use {\tt TeXShop} on a Macintosh or {\tt MiKTeX} on a Windows-based machine.
-The {\tt .tex} file must have a closing statement as
-below.
+\section{A Picture}
+%%%%%%%%%%%%%%%%%%%
+\begin{center}
+\begin{picture}(100,100)(0,0)
+\setlength{\unitlength}{1pt}
+\put(20,70){\circle{30}}  \put(20,70){\circle*{10}}   % left eye
+\put(80,70){\circle{30}}  \put(80,70){\circle*{10}}   % right eye
+\put(40,40){\line(1,2){10}} \put(60,40){\line(-1,2){10}} \put(40,40){\line(1,0){20}} % nose
+\put(50,20){\oval(80,10)[b]} % mouth
+\multiput(0,90)(4,0){10}{\line(1,3){4}}  % left eyebrow
+\multiput(100,90)(-4,0){10}{\line(-1,3){4}}  % right eyebrow
+\end{picture}
+\end{center}
 
 
 \end{document}
